--- a/.github/workflows/refresh.yaml
+++ b/.github/workflows/refresh.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: ghstats-data
+          ref: "gh-pages"
 
       - name: Checkout source repository
         uses: actions/checkout@v2
